MB-35539: Check cas of committed item when creating new prepare

Transactions identified that we were not checking the cas of the
committed item when attempting to add a new prepare. This was
causing us to lose subdoc operations. Refactor the code to hit all
of the normal checks made in VBucket::processSetInner when attempting
to add a new prepare.

Change-Id: I9cd19b425180c910b7ae84085fad5aee149ee71f
Reviewed-on: http://review.couchbase.org/113559
Reviewed-by: Dave Rigby <daver@couchbase.com>
Tested-by: Build Bot <build@couchbase.com>